plugins {
    id 'java-library'
    id 'edu.sc.seis.launch4j' version '2.1.0'
    id 'application'
	id "org.sonarqube" version "3.1.1"
}

repositories {
    jcenter()
}

apply plugin: 'java'
apply plugin: 'application'
apply plugin: 'eclipse'
apply plugin: 'org.sonarqube'

mainClassName = 'pwcg.gui.maingui.CampaignMainGUI'
applicationName = 'PWCG'

version = '11.10.0'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(11)
    }
}

dependencies {
    compile 'com.google.guava:guava:20.0'
	compile group: 'com.fasterxml', name: 'jackson-xml-databind', version: '0.6.2'
	compile group: 'com.fasterxml.jackson.core', name: 'jackson-annotations', version: '2.0.1'
	compile group: 'com.google.code.gson', name: 'gson', version: '2.7'
	compile group: 'net.bytebuddy', name: 'byte-buddy', version: '1.10.9'

	testCompile group: 'junit', name: 'junit', version: '4.13'
	testCompile group: 'net.bytebuddy', name: 'byte-buddy-agent', version: '1.10.9'
	testCompile group: 'org.objenesis', name: 'objenesis', version: '3.1'
	testCompile group: 'org.mockito', name: 'mockito-core', version: '3.3.3'
	testCompile group: 'org.powermock', name: 'powermock-module-junit4', version: '2.0.7'
	testCompile group: 'org.powermock', name: 'powermock-api-mockito2', version: '2.0.7'
	testCompile group: 'org.powermock', name: 'powermock-api-support', version: '2.0.7'
	testCompile group: 'org.powermock', name: 'powermock-reflect', version: '2.0.7'
	testCompile group: 'org.powermock', name: 'powermock-core', version: '2.0.7'
}

application {
    mainClassName = 'pwcg.gui.maingui.CampaignMainGUI'
}

jar {
    archiveName = "PWCG.jar"

    from {
        configurations.runtime.collect {
            it.isDirectory() ? it : zipTree(it)
        }

        configurations.compile.collect {
            it.isDirectory() ? it : zipTree(it)
        }
    }
    
	manifest {
        attributes 'Main-Class': 'pwcg.gui.maingui.CampaignMainGUI'
    }
}

sonarqube {
    properties {
        property "sonar.sourceEncoding", "UTF-8"
    }
}

